--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       <title>MIKE PORTFOLIO</title>
   </head>
   <body>
-    <h1>MIKE KARANJA </h1>
+    <h1><u>MIKE KARANJA</u> </h1>
         <img src="image/mike.jpeg">
         <img src="image/komo.jpeg">
-          <p> Mike was born in Moi regime around 1998 in Ruaka town he also went to school at BLUESTAR Academy<br> where he later joined KOMOTHAI BOYS HIGH</P>
+          <p> Mike was born in Moi regime around <u>1998</u> in Ruaka town he also went to school at BLUESTAR Academy<br> where he later joined KOMOTHAI BOYS HIGH</P>
             <ul>
               <h2>HOBBIES</h2>
               <li>Dancing</li>
@@ -16,6 +16,7 @@
               <li>eating</li>
               <li>coding</li>
               <li>socializing</li>
+              <li>singing</li>
             </ul>
                     <h3>some of my project include</h3>
          <link="https://github.com/kinuthi/moringa-prep.git">
