--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <h1><u>MIKE KARANJA</u> </h1>
         <img src="image/mike.jpeg">
         <img src="image/komo.jpeg">
-          <p> Mike was born in Moi regime around <u>1998</u> in Ruaka town he also went to school at BLUESTAR Academy<br> where he later joined KOMOTHAI BOYS HIGH</P>
+          <p class="intro"> Mike was born in Moi regime around <u>1998</u> in Ruaka town he also went to school at BLUESTAR Academy<br> where he later joined KOMOTHAI BOYS HIGH.</P>
             <ul>
               <h2>HOBBIES</h2>
               <li>Dancing</li>
-              <li>swimming</li>
+   <li>swimming</li>
               <li>eating</li>
               <li>coding</li>
               <li>socializing</li>
               <li>singing</li>
+              <li>Watsapp</li>
             </ul>
                     <h3>some of my project include</h3>
-         <link="https://github.com/kinuthi/moringa-prep.git">
+<a href="https://github.com/kinuthi/moringa-prep.git">https://github.com/kinuthi/moringa-prep.git"</a> <div>
 
             <a href="index2.html">more next page</a>
+            <a href="README.md" </a>
 
   </body>
 </html>
