--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <title>MIKE</title>
   </head>
   <body>
-    <h1> MORE ABOUT MIKE</h1>
+    <h1> MORE ABOUT MIKE</h1>    <h2> contacts:0746556877 </h2>
     <img src="image/images.jpeg">
     <p>currently studying computer programming in Moringa school</P>
       <h2>programming courses<h2>
